Dashboard: fix for fullscreen mode and small gap sometimes showing the underlying dashboard

--- a/src/css/less/grafana.less
+++ b/src/css/less/grafana.less
@@ -135,6 +135,7 @@
   .main-view-container {
     height: 0;
     overflow: hidden;
+    padding: 0;
   }
 }
 
